--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   
    
     <h1>Image search Engine</h1>
-   
-      <form id="inputt">
+   <div class="carrier">
+    <form id="inputt">
       <input type="text" id="input" placeholder="search anythig here...">
       <button id="btn">Search</button>
     </form>
+   </div>
+   
   
   <div id="display"></div>
 
